# usc-discord-bot-py

./: .gitignore  .replit  Dockerfile  Procfile  README.md  commands.py  configs.py  index.js  keep_alive.py  mongo.py  package-lock.json  package.json  pyproject.toml  ranks.py  requirements.txt  start_prod_bot.sh  usc_bot.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main.yml
cogs/: __init__.py  bgs.py  galnet.py  powerplay.py
cogs/commands/: admin.py  dev.py  education.py  fun.py  gank.py  inara.py  util.py
data/: faction_data.json
utils/: charts.py
