[tool.poetry]
name = "usc-discord-bot"
version = "0.1.0"
description = ""
authors = ["Admiralfeb <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
python-dotenv = "^0.17.0"
discord-py-slash-command = "^1.1.1"
flask = "^1.1.2"
pymongo = "^3.11.3"
dnspython = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
